style(web): fix radio button group and label text overflow

--- a/web/components/Options/Options.module.scss
+++ b/web/components/Options/Options.module.scss
@@ -4,8 +4,8 @@
     font-weight: 700;
     font-size: 0.75rem;
     border-radius: 10px;
-    padding: 2px 0.75rem;
-    margin: 2px;
+    padding: 4px 0.75rem;
+    margin: 1px;
     &:hover {
       cursor: pointer;
     }
