--- a/web/styles/Charts.module.scss
+++ b/web/styles/Charts.module.scss
@@ -25,7 +25,7 @@ $small: 6px;
     background-color: $bg-dark;
     border: 3px solid white;
     // padding: 12px;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 
     .playerBioCard {
       grid-area: bioCard;
